dey.conf: force imx-gpu-viv as the provider for opencl-headers
There's a recipe in the thud branch of meta-openembedded specifically for the
opencl-headers package, but it's also provided by imx-gpu-viv. This generates
build errors when parsing the recipes and when populating the sysroot for
opencv.

https://jira.digi.com/browse/DEL-6603

Signed-off-by: Gabriel Valcazar <gabriel.valcazar@digi.com>

--- a/meta-digi-dey/conf/distro/dey.conf
+++ b/meta-digi-dey/conf/distro/dey.conf
@@ -68,6 +68,11 @@ PREFERRED_PROVIDER_u-boot-fw-utils ?= "u-boot-fw-utils"
 # Use git recipe for libsoc
 PREFERRED_VERSION_libsoc = "git"
 
+# There's a generic opencl-headers recipe in the thud branch of
+# meta-openembedded, but we should use the package provided by the imx-gpu-viv
+# recipe in case there are NXP-specific changes in it
+PREFERRED_PROVIDER_opencl-headers ?= "imx-gpu-viv"
+
 SDK_NAME = "${DISTRO}-${TCLIBC}-${SDK_ARCH}-${IMAGE_BASENAME}-${TUNE_PKGARCH}"
 SDKPATH = "/opt/${DISTRO}/${SDK_VERSION}"
 
