meta-digi-dey: xorg: fix X11 server issues for ccimx8x
Signed-off-by: David Escalona <david.escalona@digi.com>

--- a/meta-digi-dey/recipes-graphics/xorg-xserver/xserver-xf86-config/imxdrm/xorg.conf
+++ b/meta-digi-dey/recipes-graphics/xorg-xserver/xserver-xf86-config/imxdrm/xorg.conf
@@ -2,6 +2,7 @@ Section "Device"
     Identifier  "i.MX Accelerated DRM Device"
     Driver      "vivante"
     Option      "kmsdev"     "/dev/dri/card0"
+    Option      "fbdev"      "/dev/fb0"
 EndSection
 
 Section "ServerFlags"
