ccimx8x: add DualX variants device trees and rename the QuadXPlus
With the arrival of DualX variants, the devicetree files have changed
their names to include the soc type (qxp, dx).

Signed-off-by: Hector Palacios <hector.palacios@digi.com>

https://jira.digi.com/browse/DEL-6641

--- a/meta-digi-arm/conf/machine/ccimx8x-sbc-pro.conf
+++ b/meta-digi-arm/conf/machine/ccimx8x-sbc-pro.conf
@@ -23,9 +23,11 @@ UBOOT_CONFIG[ccimx8x_sbc_pro1GB] = "ccimx8x_sbc_pro1GB_defconfig,,u-boot-dtb.${U
 UBOOT_CONFIG[ccimx8x_sbc_pro512MB] = "ccimx8x_sbc_pro512MB_defconfig,,u-boot-dtb.${UBOOT_SUFFIX}"
 
 KERNEL_DEVICETREE ?= " \
-    digi/ccimx8x-sbc-pro-id135.dtb \
-    digi/ccimx8x-sbc-pro-wb.dtb \
-    digi/ccimx8x-sbc-pro.dtb \
+    digi/ccimx8dx-sbc-pro-wb.dtb \
+    digi/ccimx8dx-sbc-pro.dtb \
+    digi/ccimx8qxp-sbc-pro-id135.dtb \
+    digi/ccimx8qxp-sbc-pro-wb.dtb \
+    digi/ccimx8qxp-sbc-pro.dtb \
 "
 
 SERIAL_CONSOLES ?= "115200;ttyLP2"
