sdk: add platform and image names to the default SDK installation path
Since the final image name is not available in a global scope, append it to the
default installation path in the SDK extraction script once it has been
packaged.

The new default installation path format is:

    /opt/dey/<version>/<platform>/<image>

https://jira.digi.com/browse/DEL-5264

Signed-off-by: Gabriel Valcazar <gabriel.valcazar@digi.com>

--- a/meta-digi-dey/conf/distro/dey.conf
+++ b/meta-digi-dey/conf/distro/dey.conf
@@ -70,7 +70,7 @@ PREFERRED_VERSION_libsoc = "git"
 PREFERRED_PROVIDER_opencl-headers ?= "imx-gpu-viv"
 
 SDK_NAME = "${DISTRO}-${TCLIBC}-${SDK_ARCH}-${IMAGE_BASENAME}-${TUNE_PKGARCH}"
-SDKPATH = "/opt/${DISTRO}/${SDK_VERSION}"
+SDKPATH = "/opt/${DISTRO}/${SDK_VERSION}/${MACHINE}"
 
 DISTRO_EXTRA_RDEPENDS += " ${POKY_DEFAULT_EXTRA_RDEPENDS}"
 DISTRO_EXTRA_RRECOMMENDS += " ${POKY_DEFAULT_EXTRA_RRECOMMENDS}"
