Use https instead of ftp when accessing the Digi support folders
Update the README as well to reflect this change, since the ftp protocol might
be blocked in some corporate networks.

https://jira.digi.com/browse/DEL-6880

Signed-off-by: Gabriel Valcazar <gabriel.valcazar@digi.com>

--- a/meta-digi-arm/conf/layer.conf
+++ b/meta-digi-arm/conf/layer.conf
@@ -23,6 +23,6 @@ LICENSE_PATH += "${LAYERDIR}/custom-licenses"
 DIGI_LOG_GIT ?= "git://log-sln-git.digi.com/"
 DIGI_MTK_GIT ?= "git://stash.digi.com/"
 DIGI_GIT	 ?= "${DIGI_LOG_GIT}"
-DIGI_PKG_SRC ?= "ftp://ftp1.digi.com/support/digiembeddedyocto/source"
+DIGI_PKG_SRC ?= "https://ftp1.digi.com/support/digiembeddedyocto/source"
 
 DIGI_GITHUB_GIT ?= "git://github.com/digi-embedded"
