--- a/meta-digi-dey/conf/layer.conf
+++ b/meta-digi-dey/conf/layer.conf
@@ -25,7 +25,7 @@ DIGI_OPEN_EULA_FILE = "${LAYERDIR}/DIGI_OPEN_EULA"
 LICENSE_PATH += "${LAYERDIR}/custom-licenses"
 
 # Digi mirror for packages vanished upstream
-DIGI_MIRROR ?= "ftp://ftp1.digi.com/support/digiembeddedyocto/mirror/"
+DIGI_MIRROR ?= "https://ftp1.digi.com/support/digiembeddedyocto/mirror/"
 MIRRORS += "\
 ftp://.*/.*      ${DIGI_MIRROR} \n \
 http://.*/.*     ${DIGI_MIRROR} \n \
