Use https instead of ftp when accessing the Digi support folders
Update the README as well to reflect this change, since the ftp protocol might
be blocked in some corporate networks.

https://jira.digi.com/browse/DEL-6880

Signed-off-by: Gabriel Valcazar <gabriel.valcazar@digi.com>
(cherry picked from commit a114391ae9653f7640f04e2b601a91075678584e)
Signed-off-by: Javier Viguera <javier.viguera@digi.com>

--- a/meta-digi-dey/conf/layer.conf
+++ b/meta-digi-dey/conf/layer.conf
@@ -22,7 +22,7 @@ DIGI_EULA_FILE = "${LAYERDIR}/DIGI_EULA"
 DIGI_OPEN_EULA_FILE = "${LAYERDIR}/DIGI_OPEN_EULA"
 
 # Digi mirror for packages vanished upstream
-DIGI_MIRROR ?= "ftp://ftp1.digi.com/support/digiembeddedyocto/mirror/"
+DIGI_MIRROR ?= "https://ftp1.digi.com/support/digiembeddedyocto/mirror/"
 MIRRORS += "\
 ftp://.*/.*      ${DIGI_MIRROR} \n \
 http://.*/.*     ${DIGI_MIRROR} \n \
