wpa_supplicant: unify config file for all platforms
WPA and P2P configuration files are basically the same between all
platforms, so we remove all duplicated files to use a common file
and modify it in the recipe logic.

Signed-off-by: Arturo Buzarra <arturo.buzarra@digi.com>

--- a/meta-digi-arm/conf/machine/ccimx6qpsbc.conf
+++ b/meta-digi-arm/conf/machine/ccimx6qpsbc.conf
@@ -10,6 +10,7 @@ WIRELESS_MODULE_append = " ${@oe.utils.conditional('HAVE_WIFI', '1', 'kernel-mod
 
 # Wireless p2p interface
 WLAN_P2P_INTERFACE ?= "p2p0"
+WLAN_P2P_DEVICE_NAME ?= "ccimx6qp-p2p"
 
 MACHINE_EXTRA_RRECOMMENDS += " \
     cryptoauthlib \
