--- a/meta-digi-dey/recipes-connectivity/wpa-supplicant/wpa-supplicant/ccimx6sbc/wpa_supplicant_p2p.conf
+++ b/meta-digi-dey/recipes-connectivity/wpa-supplicant/wpa-supplicant/ccimx6sbc/wpa_supplicant_p2p.conf
@@ -1,6 +1,6 @@
 ctrl_interface=/var/run/wpa_supplicant
 ctrl_interface_group=0
-device_name=ccimx6-p2p
+device_name=##WLAN_P2P_DEVICE_NAME##
 device_type=10-0050F204-5
 config_methods=virtual_push_button keypad display pin
 persistent_reconnect=1
