--- a/meta-digi-dey/recipes-connectivity/wpa-supplicant/wpa-supplicant/wpa_supplicant_p2p.conf
+++ b/meta-digi-dey/recipes-connectivity/wpa-supplicant/wpa-supplicant/wpa_supplicant_p2p.conf
@@ -1,6 +1,6 @@
 ctrl_interface=/var/run/wpa_supplicant
 update_config=1
-device_name=ccimx6ul-p2p
+device_name=##WLAN_P2P_DEVICE_NAME##
 manufacturer=QCA
 model_name=McK
 device_type=1-0050F204-1
