--- a/meta-digi-arm/conf/machine/ccimx6sbc.conf
+++ b/meta-digi-arm/conf/machine/ccimx6sbc.conf
@@ -5,6 +5,9 @@
 # Contains the ConnectCore 6 module.
 include conf/machine/include/ccimx6.inc
 
+# Wireless p2p interface
+WLAN_P2P_DEVICE_NAME ?= "ccimx6-p2p"
+
 # Firmware
 MACHINE_FIRMWARE_append = " ${@oe.utils.conditional('HAVE_BT', '1' , 'firmware-atheros-ar3k', '', d)}"
 MACHINE_FIRMWARE_append = " ${@oe.utils.conditional('HAVE_WIFI', '1' , 'firmware-atheros-ath6kl', '', d)}"
