bluez5: unify config file for all platforms
Signed-off-by: Arturo Buzarra <arturo.buzarra@digi.com>

--- a/meta-digi-arm/conf/machine/ccimx6qpsbc.conf
+++ b/meta-digi-arm/conf/machine/ccimx6qpsbc.conf
@@ -37,6 +37,9 @@ KERNEL_DEVICETREE ?= " \
 
 SERIAL_CONSOLES ?= "115200;ttymxc3"
 
+# Bluetooth interface
+BT_DEVICE_NAME ?= "cc6qp"
+
 # Bluetooth tty
 BT_TTY ?= "ttymxc1"
 
