--- a/meta-digi-arm/conf/machine/ccimx6sbc.conf
+++ b/meta-digi-arm/conf/machine/ccimx6sbc.conf
@@ -38,6 +38,9 @@ KERNEL_DEVICETREE ?= " \
 
 SERIAL_CONSOLES ?= "115200;ttymxc3"
 
+# Bluetooth interface
+BT_DEVICE_NAME ?= "cc6"
+
 # Bluetooth tty
 BT_TTY ?= "ttymxc1"
 
