hostapd: generalize recipe to reduce the overhead when adding a new platform
Signed-off-by: Arturo Buzarra <arturo.buzarra@digi.com>

--- a/meta-digi-arm/conf/machine/ccimx6qpsbc.conf
+++ b/meta-digi-arm/conf/machine/ccimx6qpsbc.conf
@@ -7,6 +7,7 @@ include conf/machine/include/ccimx6.inc
 
 # Wireless external module
 WIRELESS_MODULE_append = " ${@oe.utils.conditional('HAVE_WIFI', '1', 'kernel-module-qualcomm', '', d)}"
+HAS_WIFI_VIRTWLANS = "true"
 
 # Wireless p2p interface
 WLAN_P2P_INTERFACE ?= "p2p0"
