--- a/meta-digi-arm/conf/machine/ccimx6sbc.conf
+++ b/meta-digi-arm/conf/machine/ccimx6sbc.conf
@@ -5,6 +5,8 @@
 # Contains the ConnectCore 6 module.
 include conf/machine/include/ccimx6.inc
 
+HAS_WIFI_VIRTWLANS = "false"
+
 # Wireless p2p interface
 WLAN_P2P_DEVICE_NAME ?= "ccimx6-p2p"
 
