udev-extraconf: create /dev/ttyXBee symlink to XBee uart
https://jira.digi.com/browse/DEL-6903

Signed-off-by: Javier Viguera <javier.viguera@digi.com>

--- a/meta-digi-arm/conf/machine/ccimx6qpsbc.conf
+++ b/meta-digi-arm/conf/machine/ccimx6qpsbc.conf
@@ -44,6 +44,9 @@ BT_DEVICE_NAME ?= "cc6qp"
 # Bluetooth tty
 BT_TTY ?= "ttymxc1"
 
+# XBee
+XBEE_TTY ?= "ttymxc4"
+
 # U-Boot script to be copied to the boot image
 BOOT_SCRIPTS = "boot.scr:boot.scr"
 
