--- a/meta-digi-arm/conf/machine/ccimx6ulsbc.conf
+++ b/meta-digi-arm/conf/machine/ccimx6ulsbc.conf
@@ -35,6 +35,9 @@ SERIAL_CONSOLES ?= "115200;ttymxc4"
 # Bluetooth tty
 BT_TTY ?= "ttymxc0"
 
+# XBee
+XBEE_TTY ?= "ttymxc1"
+
 # U-Boot script to be copied to the boot image
 BOOT_SCRIPTS = "boot.scr:boot.scr"
 
