--- a/meta-digi-arm/conf/machine/ccimx8mn-dvk.conf
+++ b/meta-digi-arm/conf/machine/ccimx8mn-dvk.conf
@@ -27,6 +27,7 @@ BT_TTY ?= "ttymxc1"
 # XBee2
 XBEE_RESET_N_GPIO ?= "8"
 XBEE_SLEEP_RQ_GPIO ?= "7"
+XBEE_TTY ?= "ttymxc3"
 
 # U-Boot script to be copied to the boot image
 BOOT_SCRIPTS = "boot.scr:boot.scr"
