--- a/meta-digi-arm/conf/machine/ccimx6sbc.conf
+++ b/meta-digi-arm/conf/machine/ccimx6sbc.conf
@@ -46,6 +46,9 @@ BT_DEVICE_NAME ?= "cc6"
 # Bluetooth tty
 BT_TTY ?= "ttymxc1"
 
+# XBee
+XBEE_TTY ?= "ttymxc4"
+
 # U-Boot script to be copied to the boot image
 BOOT_SCRIPTS = "boot.scr:boot.scr"
 
