--- a/meta-digi-arm/conf/machine/ccimx8x-sbc-pro.conf
+++ b/meta-digi-arm/conf/machine/ccimx8x-sbc-pro.conf
@@ -28,6 +28,7 @@ BT_TTY ?= "ttyLP1"
 # XBee
 XBEE_RESET_N_GPIO ?= "220"
 XBEE_SLEEP_RQ_GPIO ?= "216"
+XBEE_TTY ?= "ttyMCA0"
 
 # U-Boot script to be copied to the boot image
 BOOT_SCRIPTS = "boot.scr:boot.scr"
