weston-init: sync with meta-fsl-bsp-release branch sumo-4.14.98-2.3.0
Rework the weston-init recipe and add a BBMASK to ignore meta-freescale's
weston-init.bbappend file.

Signed-off-by: Gabriel Valcazar <gabriel.valcazar@digi.com>

--- a/meta-digi-dey/conf/layer.conf
+++ b/meta-digi-dey/conf/layer.conf
@@ -15,6 +15,7 @@ BBFILE_PATTERN_digi-dey := "^${LAYERDIR}/"
 BBFILE_PRIORITY_digi-dey = "6"
 
 BBMASK += "meta-freescale/recipes-graphics/drm/libdrm_%.bbappend"
+BBMASK += "meta-freescale/recipes-graphics/wayland/weston-init.bbappend"
 
 LAYERDEPENDS_digi-dey  = "core digi-arm"
 LAYERDEPENDS_digi-dey += "openembedded-layer networking-layer webserver qt5-layer swupdate"
