ccimx8mn-dvk: add both XBee interfaces to the xbee-init script
Now that xbee-init supports multiple interfaces, add the XBee Cellular
GPIOs to the already existing XBee User ones to it so it can handle both
of them on the ccimx8mn DVK.

https://jira.digi.com/browse/DEL-6887

Signed-off-by: Gabriel Valcazar <gabriel.valcazar@digi.com>

--- a/meta-digi-arm/conf/machine/ccimx8mn-dvk.conf
+++ b/meta-digi-arm/conf/machine/ccimx8mn-dvk.conf
@@ -24,9 +24,9 @@ SERIAL_CONSOLES ?= "115200;ttymxc2"
 # Bluetooth tty
 BT_TTY ?= "ttymxc1"
 
-# XBee2
-XBEE_RESET_N_GPIO ?= "8"
-XBEE_SLEEP_RQ_GPIO ?= "7"
+# XBees
+XBEE_RESET_N_GPIO ?= "508,8"
+XBEE_SLEEP_RQ_GPIO ?= "504,7"
 XBEE_TTY ?= "ttymxc3"
 
 # U-Boot script to be copied to the boot image
