ccimx8x-sbc-express: add XBee TTY device
Signed-off-by: Javier Viguera <javier.viguera@digi.com>

--- a/meta-digi-arm/conf/machine/ccimx8x-sbc-express.conf
+++ b/meta-digi-arm/conf/machine/ccimx8x-sbc-express.conf
@@ -25,6 +25,7 @@ BT_TTY ?= "ttyLP1"
 # XBee
 XBEE_RESET_N_GPIO ?= "397"
 XBEE_SLEEP_RQ_GPIO ?= "400"
+XBEE_TTY ?= "ttyLP0"
 
 # U-Boot script to be copied to the boot image
 BOOT_SCRIPTS = "boot.scr:boot.scr"
