cc8mn: libdigiapix: change default values for examples
https://jira.digi.com/browse/DEL-6955

Signed-off-by: Francisco Gil <francisco.gilmartinez@digi.com>

--- a/meta-digi-dey/recipes-digi/libdigiapix/libdigiapix-git/ccimx8mn-dvk/libdigiapix.conf
+++ b/meta-digi-dey/recipes-digi/libdigiapix/libdigiapix-git/ccimx8mn-dvk/libdigiapix.conf
@@ -27,10 +27,10 @@ DEFAULT_I2C_BUS = 4
 
 [PWM]
 
-# PWM0 channel 2 on XBEE1 connector (MCA_IO15)
-DEFAULT_PWM = 0,2
+# PWM0 channel 1 USER_LED1.
+DEFAULT_PWM = 0,1
 
 [ADC]
 
-# ADC_IN0 on Expansion connector
-DEFAULT_ADC = 0,0
+# MCA_IO1 (channel 1) at XBEE1_UART_TX. Not enabled by default.
+DEFAULT_ADC = 0,1
