xbee-init: script updated to use libgpiod tools
Additionally:
   - The handling of gpios has been swapped so 'Set low XBEE_SLEEP_RQ' is done
 before 'Power cycle XBEE_RESET_N' to assure the device doesn't enter sleep mode.
   - Removed ExecStop entry from systemd service since it's doing nothing.

https://jira.digi.com/browse/DEL-6424
https://jira.digi.com/browse/DEL-6423

Signed-off-by: Hector Bujanda <hector.bujanda@digi.com>

--- a/meta-digi-arm/conf/machine/ccimx8mn-dvk.conf
+++ b/meta-digi-arm/conf/machine/ccimx8mn-dvk.conf
@@ -25,8 +25,8 @@ SERIAL_CONSOLES ?= "115200;ttymxc0"
 BT_TTY ?= "ttymxc1"
 
 # XBees
-XBEE_RESET_N_GPIO ?= "508,8"
-XBEE_SLEEP_RQ_GPIO ?= "504,7"
+XBEE_RESET_N_GPIO ?= "mca-gpio@15,gpio1@8"
+XBEE_SLEEP_RQ_GPIO ?= "mca-gpio@11,gpio1@7"
 XBEE_TTY ?= "ttymxc3"
 
 # U-Boot script to be copied to the boot image
