--- a/meta-digi-arm/conf/machine/ccimx8x-sbc-express.conf
+++ b/meta-digi-arm/conf/machine/ccimx8x-sbc-express.conf
@@ -23,8 +23,8 @@ SERIAL_CONSOLES ?= "115200;ttyLP2"
 BT_TTY ?= "ttyLP1"
 
 # XBee
-XBEE_RESET_N_GPIO ?= "397"
-XBEE_SLEEP_RQ_GPIO ?= "400"
+XBEE_RESET_N_GPIO ?= "gpio3@13"
+XBEE_SLEEP_RQ_GPIO ?= "gpio3@16"
 XBEE_TTY ?= "ttyLP0"
 
 # U-Boot script to be copied to the boot image
