--- a/meta-digi-arm/conf/machine/ccimx8x-sbc-pro.conf
+++ b/meta-digi-arm/conf/machine/ccimx8x-sbc-pro.conf
@@ -26,8 +26,8 @@ SERIAL_CONSOLES ?= "115200;ttyLP2"
 BT_TTY ?= "ttyLP1"
 
 # XBee
-XBEE_RESET_N_GPIO ?= "220"
-XBEE_SLEEP_RQ_GPIO ?= "216"
+XBEE_RESET_N_GPIO ?= "mca-gpio@15"
+XBEE_SLEEP_RQ_GPIO ?= "mca-gpio@11"
 XBEE_TTY ?= "ttyMCA0"
 
 # U-Boot script to be copied to the boot image
