--- a/meta-digi-arm/conf/machine/ccimx8x-sbc-pro.conf
+++ b/meta-digi-arm/conf/machine/ccimx8x-sbc-pro.conf
@@ -32,6 +32,7 @@ XBEE_TTY ?= "ttyMCA0"
 
 # U-Boot script to be copied to the boot image
 BOOT_SCRIPTS = "boot.scr:boot.scr"
+UBOOT_HAS_FASTBOOT = "true"
 
 # Flash image types
 IMAGE_FSTYPES ?= "boot.vfat ext4 sdcard tar.bz2 recovery.vfat"
