libdigiapix: make use of libgpiod
Added libgpiod dependence.

The configuration file entries change to following format:
   - USER_LED = mca-gpio,12
   - USER_BUTTON = mca-gpio,10

https://jira.digi.com/browse/DEL-6425

Signed-off-by: Hector Bujanda <hector.bujanda@digi.com>

--- a/meta-digi-dey/recipes-digi/libdigiapix/libdigiapix-git/ccimx6sbc/libdigiapix.conf
+++ b/meta-digi-dey/recipes-digi/libdigiapix/libdigiapix-git/ccimx6sbc/libdigiapix.conf
@@ -4,17 +4,17 @@ model = Digi International ConnectCore 6 Single Board Computer.
 [GPIO]
 
 # USER LED (RED) - GPIO02_IO02
-USER_LED = 34
-USER_LED0 = 34
+USER_LED = gpio2,2
+USER_LED0 = gpio2,2
 
 # USER LED (ORANGE) - GPIO02_IO03
-USER_LED1 = 35
+USER_LED1 = gpio2,3
 
 # USER LED (GREEN) - GPIO02_IO04
-USER_LED2 = 36
+USER_LED2 = gpio2,4
 
 # USER BUTTON - GPIO02_IO05
-USER_BUTTON = 37
+USER_BUTTON = gpio2,5
 
 [I2C]
 
