--- a/meta-digi-dey/recipes-digi/libdigiapix/libdigiapix-git/ccimx6ulsbc/libdigiapix.conf
+++ b/meta-digi-dey/recipes-digi/libdigiapix/libdigiapix-git/ccimx6ulsbc/libdigiapix.conf
@@ -3,11 +3,11 @@ model = Digi International ConnectCore 6UL SBC.
 
 [GPIO]
 
-# USER LED - I/O Expander IO23
-USER_LED = 488
+# USER LED
+USER_LED = ioexp-gpio,23
 
-# USER BUTTON - MCA_IO1
-USER_BUTTON = 505
+# USER BUTTON
+USER_BUTTON = mca-gpio,1
 
 [I2C]
 
