--- a/meta-digi-dey/recipes-digi/libdigiapix/libdigiapix-git/ccimx6ulstarter/libdigiapix.conf
+++ b/meta-digi-dey/recipes-digi/libdigiapix/libdigiapix-git/ccimx6ulstarter/libdigiapix.conf
@@ -3,11 +3,11 @@ model = Digi International ConnectCore 6UL Starter Board.
 
 [GPIO]
 
-# USER LED - GPIO03_IO11
-USER_LED = 75
+# USER LED
+USER_LED = gpio3,11
 
-# USER BUTTON - GPIO03_IO03
-USER_BUTTON = 67
+# USER BUTTON
+USER_BUTTON = gpio3,3
 
 [I2C]
 
