--- a/meta-digi-dey/recipes-digi/libdigiapix/libdigiapix-git/ccimx8mn-dvk/libdigiapix.conf
+++ b/meta-digi-dey/recipes-digi/libdigiapix/libdigiapix-git/ccimx8mn-dvk/libdigiapix.conf
@@ -3,22 +3,22 @@ model = Digi International ConnectCore 8M Nano DVK.
 
 [GPIO]
 
-# USER LED1 - MCA_IO12
-USER_LED = 505
-USER_LED1 = 505
+# USER LED1
+USER_LED = mca-gpio,12
+USER_LED1 = mca-gpio,12
 
-# USER_LED2 - MCA_IO18
-USER_LED2 = 511
+# USER_LED2
+USER_LED2 = mca-gpio,18
 
-# USER_LED3 - GPIO2_IO19
-USER_LED3 = 51
+# USER_LED3
+USER_LED3 = gpio2,19
 
-# USER BUTTON1 - MCA_IO10
-USER_BUTTON = 503
-USER_BUTTON1 = 503
+# USER BUTTON1
+USER_BUTTON = mca-gpio,10
+USER_BUTTON1 = mca-gpio,10
 
-# USER BUTTON2 - GPIO2_IO20
-USER_BUTTON2 = 52
+# USER BUTTON2
+USER_BUTTON2 = gpio2,20
 
 [I2C]
 
