--- a/meta-digi-dey/recipes-digi/libdigiapix/libdigiapix-git/ccimx8x-sbc-express/libdigiapix.conf
+++ b/meta-digi-dey/recipes-digi/libdigiapix/libdigiapix-git/ccimx8x-sbc-express/libdigiapix.conf
@@ -3,11 +3,11 @@ model = Digi International ConnectCore 8X SBC Express.
 
 [GPIO]
 
-# USER LED - GPIO0_19
-USER_LED = 499
+# USER LED
+USER_LED = gpio0,19
 
-# USER BUTTON - GPIO0_20
-USER_BUTTON = 500
+# USER BUTTON
+USER_BUTTON = gpio0,20
 
 [I2C]
 
