--- a/meta-digi-dey/recipes-digi/libdigiapix/libdigiapix-git/ccimx8x-sbc-pro/libdigiapix.conf
+++ b/meta-digi-dey/recipes-digi/libdigiapix/libdigiapix-git/ccimx8x-sbc-pro/libdigiapix.conf
@@ -3,15 +3,15 @@ model = Digi International ConnectCore 8X SBC Pro.
 
 [GPIO]
 
-# USER LED0 - MCA_IO18
-USER_LED = 223
-USER_LED0 = 223
+# USER LED0
+USER_LED = mca-gpio,18
+USER_LED0 = mca-gpio,18
 
-# USER_LED1 - MCA_IO10
-USER_LED1 = 215
+# USER_LED1
+USER_LED1 = mca-gpio,10
 
-# USER BUTTON - MCA_IO07
-USER_BUTTON = 212
+# USER BUTTON
+USER_BUTTON = mca-gpio,7
 
 [I2C]
 
