--- a/meta-digi-arm/conf/machine/ccimx8mn-dvk.conf
+++ b/meta-digi-arm/conf/machine/ccimx8mn-dvk.conf
@@ -15,7 +15,8 @@ SPL_BINARY = "spl/u-boot-spl.bin"
 UBOOT_DTB_NAME = "ccimx8mn-dvk.dtb"
 
 KERNEL_DEVICETREE ?= " \
-    digi/ccimx8mn-dvk-wb.dtb \
+    digi/ccimx8mn_ov_bt.dtbo \
+    digi/ccimx8mn_ov_wifi.dtbo \
     digi/ccimx8mn-dvk.dtb \
 "
 
