zeus migration: sync distro config
https://jira.digi.com/browse/DEL-7001

Signed-off-by: Arturo Buzarra <arturo.buzarra@digi.com>

--- a/meta-digi-dey/conf/distro/dey.conf
+++ b/meta-digi-dey/conf/distro/dey.conf
@@ -3,7 +3,7 @@ DISTRO_NAME = "Digi Embedded Yocto"
 DISTRO_VERSION = "3.0-r1"
 DISTRO_CODENAME = "zeus"
 SDK_VENDOR = "-deysdk"
-SDK_VERSION := "${@'${DISTRO_VERSION}'}"
+SDK_VERSION := "${@d.getVar('DISTRO_VERSION')}"
 
 MAINTAINER = "Digi Support <tech.support@digi.com>"
 
@@ -19,7 +19,7 @@ POKY_DEFAULT_DISTRO_FEATURES = "largefile opengl ptest multiarch wayland bluez5 
 POKY_DEFAULT_EXTRA_RDEPENDS = "packagegroup-dey-core"
 POKY_DEFAULT_EXTRA_RRECOMMENDS = ""
 
-DISTRO_FEATURES ?= "${DISTRO_FEATURES_DEFAULT} ${DISTRO_FEATURES_LIBC} ${POKY_DEFAULT_DISTRO_FEATURES}"
+DISTRO_FEATURES ?= "${DISTRO_FEATURES_DEFAULT} ${POKY_DEFAULT_DISTRO_FEATURES}"
 
 # Removed DISTRO_FEATURES
 #   'wayland' -> only supported on the i.MX8 QXP
@@ -55,7 +55,7 @@ PREFERRED_VERSION_bluez5 ?= "5.50"
 PREFERRED_PROVIDER_jpeg ?= "jpeg"
 PREFERRED_PROVIDER_jpeg_armv7a ?= "libjpeg-turbo"
 
-PREFERRED_VERSION_linux-yocto ?= "4.18%"
+PREFERRED_VERSION_linux-yocto ?= "5.2%"
 
 # Some features (swupdate, environment encryption) depends on this specific
 # provider for u-boot-fw-tools
@@ -69,7 +69,7 @@ PREFERRED_VERSION_libsoc = "git"
 # recipe in case there are NXP-specific changes in it
 PREFERRED_PROVIDER_opencl-headers ?= "imx-gpu-viv"
 
-SDK_NAME = "${DISTRO}-${TCLIBC}-${SDK_ARCH}-${IMAGE_BASENAME}-${TUNE_PKGARCH}"
+SDK_NAME = "${DISTRO}-${TCLIBC}-${SDKMACHINE}-${IMAGE_BASENAME}-${TUNE_PKGARCH}-${MACHINE}"
 SDKPATH = "/opt/${DISTRO}/${SDK_VERSION}/${MACHINE}"
 
 DISTRO_EXTRA_RDEPENDS += " ${POKY_DEFAULT_EXTRA_RDEPENDS}"
@@ -85,9 +85,6 @@ DISTRO_EXTRA_RDEPENDS_append_qemux86-64 = " ${POKYQEMUDEPS}"
 
 TCLIBCAPPEND = ""
 
-QEMU_TARGETS ?= "arm aarch64 i386 mips mipsel mips64 mips64el nios2 ppc x86_64"
-# Other QEMU_TARGETS "sh4"
-
 # Some packages need this (e.g. gstreamer1.0-plugins-ugly)
 LICENSE_FLAGS_WHITELIST += "commercial"
 
@@ -101,27 +98,20 @@ osc://.*/.*   http://downloads.yoctoproject.org/mirror/sources/ \n \
 p4://.*/.*    http://downloads.yoctoproject.org/mirror/sources/ \n \
 svn://.*/.*   http://downloads.yoctoproject.org/mirror/sources/ \n"
 
-MIRRORS =+ "\
-ftp://.*/.*      http://downloads.yoctoproject.org/mirror/sources/ \n \
-http://.*/.*     http://downloads.yoctoproject.org/mirror/sources/ \n \
-https://.*/.*    http://downloads.yoctoproject.org/mirror/sources/ \n"
-
-# The CONNECTIVITY_CHECK_URI's are used to test whether we can successfully
-# fetch from the network (and warn you if not). To disable the test set
-# the variable to be empty.
-# Git example url: git://git.yoctoproject.org/yocto-firewall-test;protocol=git;rev=master
-CONNECTIVITY_CHECK_URIS ?= "https://www.example.com/"
-
 SANITY_TESTED_DISTROS ?= " \
-            poky-2.5 \n \
-            poky-2.6 \n \
+            poky-2.7 \n \
+            poky-3.0 \n \
             ubuntu-16.04 \n \
             ubuntu-18.04 \n \
+            ubuntu-19.04 \n \
             fedora-28 \n \
+            fedora-29 \n \
+            fedora-30 \n \
             centos-7 \n \
             debian-8 \n \
             debian-9 \n \
-            opensuse-42.3 \n \
+            debian-10 \n \
+            opensuseleap-15.1 \n \
             "
 #
 # OELAYOUT_ABI allows us to notify users when the format of TMPDIR changes in
