--- a/meta-digi-dey/conf/layer.conf
+++ b/meta-digi-dey/conf/layer.conf
@@ -20,7 +20,7 @@ BBMASK += "meta-freescale/recipes-graphics/wayland/weston-init.bbappend"
 LAYERDEPENDS_digi-dey  = "core digi-arm"
 LAYERDEPENDS_digi-dey += "openembedded-layer networking-layer webserver qt5-layer swupdate"
 
-LAYERSERIES_COMPAT_digi-dey = "thud"
+LAYERSERIES_COMPAT_digi-dey = "zeus"
 
 # Digi's General and Open Source license agreements
 DIGI_EULA_FILE = "${LAYERDIR}/DIGI_EULA"
