ccimx8mn-dvk: add LVDS overlay to the device tree list
This overlay is not handled in our bootscript, but we add it to the Linux
partition in case users want to apply it manually.

https://jira.digi.com/browse/DEL-2609

Signed-off-by: Gabriel Valcazar <gabriel.valcazar@digi.com>

--- a/meta-digi-arm/conf/machine/ccimx8mn-dvk.conf
+++ b/meta-digi-arm/conf/machine/ccimx8mn-dvk.conf
@@ -19,6 +19,7 @@ KERNEL_DEVICETREE ?= " \
     digi/ccimx8mn_ov_v1.dtbo \
     digi/ccimx8mn_ov_wifi.dtbo \
     digi/ccimx8mn-dvk.dtb \
+    digi/ccimx8mn-dvk_ov_lvds.dtbo \
 "
 
 SERIAL_CONSOLES ?= "115200;ttymxc0"
