ccimx8x-sbc-pro: add optional device tree overlays
These overlays aren't handled in our bootscript, but we make them available for
users in case they wish to use alternative interface configurations.

https://jira.digi.com/browse/DEL-7100

Signed-off-by: Gabriel Valcazar <gabriel.valcazar@digi.com>

--- a/meta-digi-arm/conf/machine/ccimx8x-sbc-pro.conf
+++ b/meta-digi-arm/conf/machine/ccimx8x-sbc-pro.conf
@@ -17,6 +17,11 @@ KERNEL_DEVICETREE ?= " \
     digi/ccimx8qxp-sbc-pro.dtb \
     digi/ccimx8x_ov_bt.dtbo \
     digi/ccimx8x_ov_wifi.dtbo \
+    digi/ccimx8x-sbc-pro_ov_flexcan1.dtbo \
+    digi/ccimx8x-sbc-pro_ov_lpuart3.dtbo \
+    digi/ccimx8x-sbc-pro_ov_lvds1.dtbo \
+    digi/ccimx8x-sbc-pro_ov_parallel-camera.dtbo \
+    digi/ccimx8x-sbc-pro_ov_pcie-card.dtbo \
 "
 
 SERIAL_CONSOLES ?= "115200;ttyLP2"
