--- a/meta-digi-arm/conf/machine/ccimx8x-sbc-pro.conf
+++ b/meta-digi-arm/conf/machine/ccimx8x-sbc-pro.conf
@@ -13,9 +13,9 @@ UBOOT_CONFIG[ccimx8x_sbc_pro1GB] = "ccimx8x_sbc_pro1GB_defconfig,,u-boot-dtb.${U
 UBOOT_CONFIG[ccimx8x_sbc_pro512MB] = "ccimx8x_sbc_pro512MB_defconfig,,u-boot-dtb.${UBOOT_SUFFIX}"
 
 KERNEL_DEVICETREE ?= " \
-    digi/ccimx8dx-sbc-pro.dtb \
-    digi/ccimx8qxp-sbc-pro.dtb \
+    digi/ccimx8x-sbc-pro.dtb \
     digi/ccimx8x_ov_bt.dtbo \
+    digi/ccimx8x_ov_qxp.dtbo \
     digi/ccimx8x_ov_wifi.dtbo \
     digi/ccimx8x-sbc-pro_ov_flexcan1.dtbo \
     digi/ccimx8x-sbc-pro_ov_lpuart3.dtbo \
