--- a/meta-digi-dey/recipes-graphics/xorg-xserver/xserver-xf86-config/imxdrm/xorg.conf
+++ b/meta-digi-dey/recipes-graphics/xorg-xserver/xserver-xf86-config/imxdrm/xorg.conf
@@ -1,8 +1,6 @@
-Section "Device"
-    Identifier  "i.MX Accelerated DRM Device"
-    Driver      "vivante"
-    Option      "kmsdev"     "/dev/dri/card0"
-    Option      "fbdev"      "/dev/fb0"
+Section "Module"
+  Load "dri2"
+  Load "glamoregl"
 EndSection
 
 Section "ServerFlags"
@@ -10,7 +8,4 @@ Section "ServerFlags"
     Option "StandbyTime"  "0"
     Option "SuspendTime"  "0"
     Option "OffTime"  "0"
-    Option "Xinerama"  "off"
-    Option "Clone"  "on"
-    Option "SWcursor"  "true"
 EndSection
