ccimx8x: add missing HDMI bridge overlay to KERNEL_DEVICETREE
Reported-by: Alfonso Martín Rey <alfonso.martinrey@digi.com>
Signed-off-by: Hector Palacios <hector.palacios@digi.com>

--- a/meta-digi-arm/conf/machine/ccimx8x-sbc-pro.conf
+++ b/meta-digi-arm/conf/machine/ccimx8x-sbc-pro.conf
@@ -19,6 +19,7 @@ KERNEL_DEVICETREE ?= " \
     digi/ccimx8x_ov_wifi.dtbo \
     digi/ccimx8x-sbc-pro_ov_flexcan1.dtbo \
     digi/ccimx8x-sbc-pro_ov_lpuart3.dtbo \
+    digi/ccimx8x-sbc-pro_ov_lt9812-hdmi-dsi0.dtbo \
     digi/ccimx8x-sbc-pro_ov_lvds1.dtbo \
     digi/ccimx8x-sbc-pro_ov_parallel-camera.dtbo \
     digi/ccimx8x-sbc-pro_ov_pcie-card.dtbo \
