ccimx8x: add Fusion 10 overlay to KERNEL_DEVICETREE
Signed-off-by: Mike Engel <Mike.Engel@digi.com>

--- a/meta-digi-arm/conf/machine/ccimx8x-sbc-pro.conf
+++ b/meta-digi-arm/conf/machine/ccimx8x-sbc-pro.conf
@@ -23,6 +23,7 @@ KERNEL_DEVICETREE ?= " \
     digi/ccimx8x-sbc-pro_ov_lvds1.dtbo \
     digi/ccimx8x-sbc-pro_ov_parallel-camera.dtbo \
     digi/ccimx8x-sbc-pro_ov_pcie-card.dtbo \
+    digi/ccimx8x-sbc-pro_ov_hsd101pfw2_lvds.dtbo \
 "
 
 SERIAL_CONSOLES ?= "115200;ttyLP2"
