--- a/meta-digi-arm/conf/machine/ccimx8mn-dvk.conf
+++ b/meta-digi-arm/conf/machine/ccimx8mn-dvk.conf
@@ -16,6 +16,7 @@ UBOOT_DTB_NAME = "ccimx8mn-dvk.dtb"
 
 KERNEL_DEVICETREE ?= " \
     digi/ccimx8mn_ov_bt.dtbo \
+    digi/ccimx8mn_ov_quad.dtbo \
     digi/ccimx8mn_ov_v1.dtbo \
     digi/ccimx8mn_ov_wifi.dtbo \
     digi/ccimx8mn-dvk.dtb \
