ccimx8x/mn: rename dt overlays filenames
Follow the syntax:

  _ov_<som|board>_<functionality>[_<hardware>].dts

where:
  _ov_          identifies the file as an overlay.
  som|board     identifies whether the overlay applies to the SOM
		or to the carrier board.
  functionality identifies the function of the overlay.
  hardware      identifies the hardware to which the overlay
		applies.

Signed-off-by: Hector Palacios <hector.palacios@digi.com>

--- a/meta-digi-arm/conf/machine/ccimx8x-sbc-express.conf
+++ b/meta-digi-arm/conf/machine/ccimx8x-sbc-express.conf
@@ -13,9 +13,9 @@ UBOOT_CONFIG[ccimx8x_sbc_express1GB] = "ccimx8x_sbc_express1GB_defconfig,,u-boot
 
 KERNEL_DEVICETREE ?= " \
     digi/ccimx8x-sbc-express.dtb \
-    digi/ccimx8x_ov_bt.dtbo \
-    digi/ccimx8x_ov_qxp.dtbo \
-    digi/ccimx8x_ov_wifi.dtbo \
+    digi/_ov_som_bt_ccimx8x.dtbo \
+    digi/_ov_som_quad_ccimx8x.dtbo \
+    digi/_ov_som_wifi_ccimx8x.dtbo \
 "
 
 SERIAL_CONSOLES ?= "115200;ttyLP2"
