--- a/meta-digi-arm/conf/machine/ccimx8x-sbc-pro.conf
+++ b/meta-digi-arm/conf/machine/ccimx8x-sbc-pro.conf
@@ -14,16 +14,16 @@ UBOOT_CONFIG[ccimx8x_sbc_pro512MB] = "ccimx8x_sbc_pro512MB_defconfig,,u-boot-dtb
 
 KERNEL_DEVICETREE ?= " \
     digi/ccimx8x-sbc-pro.dtb \
-    digi/ccimx8x_ov_bt.dtbo \
-    digi/ccimx8x_ov_qxp.dtbo \
-    digi/ccimx8x_ov_wifi.dtbo \
-    digi/ccimx8x-sbc-pro_ov_flexcan1.dtbo \
-    digi/ccimx8x-sbc-pro_ov_lpuart3.dtbo \
-    digi/ccimx8x-sbc-pro_ov_lt9812-hdmi-dsi0.dtbo \
-    digi/ccimx8x-sbc-pro_ov_lvds1.dtbo \
-    digi/ccimx8x-sbc-pro_ov_parallel-camera.dtbo \
-    digi/ccimx8x-sbc-pro_ov_pcie-card.dtbo \
-    digi/ccimx8x-sbc-pro_ov_hsd101pfw2_lvds.dtbo \
+    digi/_ov_board_flexcan1_ccimx8x-sbc-pro.dtbo \
+    digi/_ov_board_hsd101pfw2-lvds_ccimx8x-sbc-pro.dtbo \
+    digi/_ov_board_lpuart3_ccimx8x-sbc-pro.dtbo \
+    digi/_ov_board_lt9812-hdmi-dsi0_ccimx8x-sbc-pro.dtbo \
+    digi/_ov_board_lvds1_ccimx8x-sbc-pro.dtbo \
+    digi/_ov_board_parallel-camera_ccimx8x-sbc-pro.dtbo \
+    digi/_ov_board_pcie-card_ccimx8x-sbc-pro.dtbo \
+    digi/_ov_som_bt_ccimx8x.dtbo \
+    digi/_ov_som_quad_ccimx8x.dtbo \
+    digi/_ov_som_wifi_ccimx8x.dtbo \
 "
 
 SERIAL_CONSOLES ?= "115200;ttyLP2"
