ccimx8x/mn: add dt overlays for the keypad controller
Signed-off-by: Francisco Gil Martinez <francisco.gilmartinez@digi.com>

--- a/meta-digi-arm/conf/machine/ccimx8mn-dvk.conf
+++ b/meta-digi-arm/conf/machine/ccimx8mn-dvk.conf
@@ -18,6 +18,7 @@ KERNEL_DEVICETREE ?= " \
     digi/ccimx8mn-dvk.dtb \
     digi/_ov_board_lvds_ccimx8mn-dvk.dtbo \
     digi/_ov_som_bt_ccimx8mn.dtbo \
+    digi/_ov_som_mca-keypad_ccimx8mn.dtbo \
     digi/_ov_som_quad_ccimx8mn.dtbo \
     digi/_ov_som_v1_ccimx8mn.dtbo \
     digi/_ov_som_wifi_ccimx8mn.dtbo \
