--- a/meta-digi-arm/conf/machine/ccimx8x-sbc-pro.conf
+++ b/meta-digi-arm/conf/machine/ccimx8x-sbc-pro.conf
@@ -19,6 +19,7 @@ KERNEL_DEVICETREE ?= " \
     digi/_ov_board_lpuart3_ccimx8x-sbc-pro.dtbo \
     digi/_ov_board_lt9812-hdmi-dsi0_ccimx8x-sbc-pro.dtbo \
     digi/_ov_board_lvds1_ccimx8x-sbc-pro.dtbo \
+    digi/_ov_board_v1-v3_ccimx8x-sbc-pro.dtbo \
     digi/_ov_board_parallel-camera_ccimx8x-sbc-pro.dtbo \
     digi/_ov_board_pcie-card_ccimx8x-sbc-pro.dtbo \
     digi/_ov_som_bt_ccimx8x.dtbo \
