libdigiapix: change default PWM for the ccimx8x-sbc-pro
The indexes of the MCA PWM controllers are different in Linux v5.4, so the
default value used by libdigiapix results in an error. Reflect this change and,
while at it, replace the default PWM with an IO connected to a user LED to make
the example more visual.

Signed-off-by: Gabriel Valcazar <gabriel.valcazar@digi.com>

--- a/meta-digi-dey/recipes-digi/libdigiapix/libdigiapix-git/ccimx8x-sbc-pro/libdigiapix.conf
+++ b/meta-digi-dey/recipes-digi/libdigiapix/libdigiapix-git/ccimx8x-sbc-pro/libdigiapix.conf
@@ -25,8 +25,8 @@ DEFAULT_SPI = 0,0
 
 [PWM]
 
-# MCA PWM2 channel 0 on Expansion connector (MCA_IO7)
-DEFAULT_PWM = 7,0
+# MCA PWM0 channel 5 on USER LED0 (MCA_IO18)
+DEFAULT_PWM = 0,5
 
 [ADC]
 
