--- a/meta-digi-arm/conf/machine/ccimx6qpsbc.conf
+++ b/meta-digi-arm/conf/machine/ccimx6qpsbc.conf
@@ -22,7 +22,8 @@ PREFERRED_PROVIDER_virtual/libg2d_mx6 = "imx-gpu-g2d"
 
 # U-Boot configurations
 # Last one is the default (the one the symlinks point at)
-UBOOT_CONFIG ??= "ccimx6qpsbc2GB"
+UBOOT_CONFIG ??= "ccimx6qpsbc1GB ccimx6qpsbc2GB"
+UBOOT_CONFIG[ccimx6qpsbc1GB] = "ccimx6qpsbc1GB_defconfig,,u-boot-dtb.${UBOOT_SUFFIX}"
 UBOOT_CONFIG[ccimx6qpsbc2GB] = "ccimx6qpsbc2GB_defconfig,,u-boot-dtb.${UBOOT_SUFFIX}"
 
 KERNEL_DEVICETREE ?= " \
