meta-digi-arm/conf/layer.conf: EULA.txt Update to license v15
Signed-off-by: Ann Thornton <ann.thornton@nxp.com>
Signed-off-by: Hector Bujanda <Hector.Bujanda@digi.com>

--- a/meta-digi-arm/conf/layer.conf
+++ b/meta-digi-arm/conf/layer.conf
@@ -13,6 +13,15 @@ LAYERDEPENDS_digi-arm = "core freescale-layer"
 
 LAYERSERIES_COMPAT_digi-arm = "zeus"
 
+# Define new EULAs and add them to the list defined in meta-freescale.
+# See fsl-eula-unpack.bbclass.
+FSL_EULA_FILE_MD5SUM_LA_OPT_NXP_SOFTWARE_LICENSE_V13 = "1b4db4b25c3a1e422c0c0ed64feb65d2"
+FSL_EULA_FILE_MD5SUM_LA_OPT_NXP_SOFTWARE_LICENSE_V15 = "983e4c77621568488dd902b27e0c2143"
+FSL_EULA_FILE_MD5SUMS_append = " \
+    ${FSL_EULA_FILE_MD5SUM_LA_OPT_NXP_SOFTWARE_LICENSE_V13} \
+    ${FSL_EULA_FILE_MD5SUM_LA_OPT_NXP_SOFTWARE_LICENSE_V15} \
+"
+
 # Digi's General and Open Source license agreements
 DIGI_EULA_FILE = "${LAYERDIR}/DIGI_EULA"
 DIGI_OPEN_EULA_FILE = "${LAYERDIR}/DIGI_OPEN_EULA"
