--- a/meta-digi-arm/conf/machine/ccimx8mn-dvk.conf
+++ b/meta-digi-arm/conf/machine/ccimx8mn-dvk.conf
@@ -17,6 +17,7 @@ UBOOT_DTB_NAME = "ccimx8mn-dvk.dtb"
 KERNEL_DEVICETREE ?= " \
     digi/ccimx8mn-dvk.dtb \
     digi/_ov_board_lvds_ccimx8mn-dvk.dtbo \
+    digi/_ov_board_user-leds_ccimx8mn-dvk.dtbo \
     digi/_ov_board_v1-v2_ccimx8mn-dvk.dtbo \
     digi/_ov_som_bt_ccimx8mn.dtbo \
     digi/_ov_som_mca-keypad_ccimx8mn.dtbo \
