--- a/meta-digi-dey/conf/distro/dey.conf
+++ b/meta-digi-dey/conf/distro/dey.conf
@@ -42,6 +42,7 @@ FEATURE_PACKAGES_dey-gstreamer = "packagegroup-dey-gstreamer"
 FEATURE_PACKAGES_dey-network = "packagegroup-dey-network"
 FEATURE_PACKAGES_dey-qt = "packagegroup-dey-qt"
 FEATURE_PACKAGES_dey-trustfence = "packagegroup-dey-trustfence"
+FEATURE_PACKAGES_dey-webkit = "packagegroup-dey-webkit"
 FEATURE_PACKAGES_dey-wireless = "packagegroup-dey-wireless"
 
 # Our layer only provides version 5.41, which we want to keep because
