--- a/meta-digi-dey/conf/layer.conf
+++ b/meta-digi-dey/conf/layer.conf
@@ -5,10 +5,10 @@ BBPATH .= ":${LAYERDIR}"
 BBFILES += "${LAYERDIR}/recipes-*/*/*.bb \
             ${LAYERDIR}/recipes-*/*/*.bbappend"
 
-# Let us add layer-specific bbappends which are only applied when that
-# layer is included in our configuration
-BBFILES += "${@' '.join('${LAYERDIR}/other-layers/%s/recipes*/*/*.bbappend' % layer \
-               for layer in BBFILE_COLLECTIONS.split())}"
+BBFILES_DYNAMIC += " \
+    webkit:${LAYERDIR}/dynamic-layers/webkit/*/*/*.bb \
+    webkit:${LAYERDIR}/dynamic-layers/webkit/*/*/*.bbappend \
+"
 
 BBFILE_COLLECTIONS += "digi-dey"
 BBFILE_PATTERN_digi-dey := "^${LAYERDIR}/"
