--- a/meta-digi-dey/conf/distro/dey.conf
+++ b/meta-digi-dey/conf/distro/dey.conf
@@ -70,6 +70,9 @@ PREFERRED_VERSION_libsoc = "git"
 # recipe in case there are NXP-specific changes in it
 PREFERRED_PROVIDER_opencl-headers ?= "imx-gpu-viv"
 
+# Use the FDO backend for WPE WebKit
+PREFERRED_PROVIDER_virtual/wpebackend = "wpebackend-fdo"
+
 SDK_NAME = "${DISTRO}-${TCLIBC}-${SDKMACHINE}-${IMAGE_BASENAME}-${TUNE_PKGARCH}-${MACHINE}"
 SDKPATH = "/opt/${DISTRO}/${SDK_VERSION}/${MACHINE}"
 
