machine: ccimx8x-sbc-express: build 512MB 16bit U-Boot
This machine was not building the 512MB 16bit U-Boot.
While on it, and for consistency, re-order to make the 2GB 32bit
the default (same as the SBC Pro), since the SBC Express was
discontinued as a product.

Signed-off-by: Hector Palacios <hector.palacios@digi.com>

https://jira.digi.com/browse/DEL-7363

--- a/meta-digi-arm/conf/machine/ccimx8x-sbc-express.conf
+++ b/meta-digi-arm/conf/machine/ccimx8x-sbc-express.conf
@@ -7,9 +7,10 @@ include conf/machine/include/ccimx8x.inc
 
 # U-Boot configurations
 # Last one is the default (the one the symlinks point at)
-UBOOT_CONFIG ??= "ccimx8x_sbc_express2GB ccimx8x_sbc_express1GB"
+UBOOT_CONFIG ??= "ccimx8x_sbc_express512MB ccimx8x_sbc_express1GB ccimx8x_sbc_express2GB"
 UBOOT_CONFIG[ccimx8x_sbc_express2GB] = "ccimx8x_sbc_express2GB_defconfig,,u-boot-dtb.${UBOOT_SUFFIX}"
 UBOOT_CONFIG[ccimx8x_sbc_express1GB] = "ccimx8x_sbc_express1GB_defconfig,,u-boot-dtb.${UBOOT_SUFFIX}"
+UBOOT_CONFIG[ccimx8x_sbc_express512MB] = "ccimx8x_sbc_express512MB_defconfig,,u-boot-dtb.${UBOOT_SUFFIX}"
 
 KERNEL_DEVICETREE ?= " \
     digi/ccimx8x-sbc-express.dtb \
