--- a/meta-digi-arm/conf/machine/ccimx8mm-dvk.conf
+++ b/meta-digi-arm/conf/machine/ccimx8mm-dvk.conf
@@ -1,33 +1,31 @@
 #@TYPE: Machine
-#@NAME: ConnectCore 8M Nano Development Kit.
-#@DESCRIPTION: Machine configuration for Digi's ConnectCore 8M Nano DVK.
+#@NAME: ConnectCore 8M Mini Development Kit.
+#@DESCRIPTION: Machine configuration for Digi's ConnectCore 8M Mini DVK.
 
 # Include the machine configuration for Digi's ConnectCore 8M module.
 include conf/machine/include/ccimx8m.inc
 
-DIGI_FAMILY = "ccimx8mn"
-MACHINEOVERRIDES =. "mx8:mx8m:mx8mn:ccimx8m:${DIGI_FAMILY}:"
+DIGI_FAMILY = "ccimx8mm"
+MACHINEOVERRIDES =. "mx8:mx8m:mx8mm:ccimx8m:${DIGI_FAMILY}:"
 
-BOOTLOADER_SEEK = "32"
+BOOTLOADER_SEEK = "33"
 
 # U-Boot configurations
 # Last one is the default (the one the symlinks point at)
-UBOOT_CONFIG ??= "ccimx8mn_dvk"
-UBOOT_CONFIG[ccimx8mn_dvk] = "ccimx8mn_dvk_defconfig,,u-boot-dtb.${UBOOT_SUFFIX}"
+UBOOT_CONFIG ??= "ccimx8mm_dvk"
+UBOOT_CONFIG[ccimx8mm_dvk] = "ccimx8mm_dvk_defconfig,,u-boot-dtb.${UBOOT_SUFFIX}"
 SPL_BINARY = "spl/u-boot-spl.bin"
 
 # Set u-boot DTB
-UBOOT_DTB_NAME = "ccimx8mn-dvk.dtb"
+UBOOT_DTB_NAME = "ccimx8mm-dvk.dtb"
 
 KERNEL_DEVICETREE ?= " \
-    digi/ccimx8mn-dvk.dtb \
+    digi/ccimx8mm-dvk.dtb \
     digi/_ov_board_lvds_ccimx8m-dvk.dtbo \
     digi/_ov_board_user-leds_ccimx8m-dvk.dtbo \
-    digi/_ov_board_v1-v2_ccimx8mn-dvk.dtbo \
     digi/_ov_som_bt_ccimx8m.dtbo \
     digi/_ov_som_mca-keypad_ccimx8m.dtbo \
     digi/_ov_som_quad_ccimx8m.dtbo \
-    digi/_ov_som_v1_ccimx8mn.dtbo \
     digi/_ov_som_wifi_ccimx8m.dtbo \
 "
 
