--- a/meta-digi-dey/conf/distro/dey.conf
+++ b/meta-digi-dey/conf/distro/dey.conf
@@ -1,7 +1,7 @@
 DISTRO = "dey"
 DISTRO_NAME = "Digi Embedded Yocto"
-DISTRO_VERSION = "3.0-r4"
-DISTRO_CODENAME = "zeus"
+DISTRO_VERSION = "3.2-r1"
+DISTRO_CODENAME = "gatesgarth"
 SDK_VENDOR = "-deysdk"
 SDK_VERSION := "${@d.getVar('DISTRO_VERSION')}"
 
