gatesgarth migration: sync distro config
https://jira.digi.com/browse/DEL-7508

Signed-off-by: Arturo Buzarra <arturo.buzarra@digi.com>

--- a/meta-digi-dey/conf/distro/dey.conf
+++ b/meta-digi-dey/conf/distro/dey.conf
@@ -47,8 +47,8 @@ FEATURE_PACKAGES_dey-wireless = "packagegroup-dey-wireless"
 
 # Our layer only provides version 5.41, which we want to keep because
 # it was used for Bluetooth certification. However by default the newer
-# 5.50 version should be used, which is provided by the poky layer.
-PREFERRED_VERSION_bluez5 ?= "5.50"
+# 5.55 version should be used, which is provided by the poky layer.
+PREFERRED_VERSION_bluez5 ?= "5.55"
 
 # Set the PREFERRED_PROVIDER for jpeg functionality based on the MACHINE
 # architecture.  For armv7a devices libjpeg-turbo should be used to take
@@ -56,11 +56,8 @@ PREFERRED_VERSION_bluez5 ?= "5.50"
 PREFERRED_PROVIDER_jpeg ?= "jpeg"
 PREFERRED_PROVIDER_jpeg_armv7a ?= "libjpeg-turbo"
 
-PREFERRED_VERSION_linux-yocto ?= "5.2%"
-
-# Some features (swupdate, environment encryption) depends on this specific
-# provider for u-boot-fw-tools
-PREFERRED_PROVIDER_u-boot-fw-utils ?= "u-boot-fw-utils"
+PREFERRED_VERSION_linux-yocto ?= "5.8%"
+PREFERRED_VERSION_linux-yocto-rt ?= "5.4%"
 
 # Use git recipe for libsoc
 PREFERRED_VERSION_libsoc = "git"
@@ -79,14 +76,6 @@ SDKPATH = "/opt/${DISTRO}/${SDK_VERSION}/${MACHINE}"
 DISTRO_EXTRA_RDEPENDS += " ${POKY_DEFAULT_EXTRA_RDEPENDS}"
 DISTRO_EXTRA_RRECOMMENDS += " ${POKY_DEFAULT_EXTRA_RRECOMMENDS}"
 
-POKYQEMUDEPS = "${@bb.utils.contains("INCOMPATIBLE_LICENSE", "GPL-3.0", "", "packagegroup-core-device-devel",d)}"
-DISTRO_EXTRA_RDEPENDS_append_qemuarm = " ${POKYQEMUDEPS}"
-DISTRO_EXTRA_RDEPENDS_append_qemuarm64 = " ${POKYQEMUDEPS}"
-DISTRO_EXTRA_RDEPENDS_append_qemumips = " ${POKYQEMUDEPS}"
-DISTRO_EXTRA_RDEPENDS_append_qemuppc = " ${POKYQEMUDEPS}"
-DISTRO_EXTRA_RDEPENDS_append_qemux86 = " ${POKYQEMUDEPS}"
-DISTRO_EXTRA_RDEPENDS_append_qemux86-64 = " ${POKYQEMUDEPS}"
-
 TCLIBCAPPEND = ""
 
 # Some packages need this (e.g. gstreamer1.0-plugins-ugly)
@@ -103,43 +92,41 @@ p4://.*/.*    http://downloads.yoctoproject.org/mirror/sources/ \n \
 svn://.*/.*   http://downloads.yoctoproject.org/mirror/sources/ \n"
 
 SANITY_TESTED_DISTROS ?= " \
-            poky-2.7 \n \
             poky-3.0 \n \
+            poky-3.1 \n \
+            poky-3.2 \n \
             ubuntu-16.04 \n \
             ubuntu-18.04 \n \
-            ubuntu-19.04 \n \
-            fedora-28 \n \
-            fedora-29 \n \
+            ubuntu-20.04 \n \
             fedora-30 \n \
+            fedora-31 \n \
+            fedora-32 \n \
             centos-7 \n \
+            centos-8 \n \
             debian-8 \n \
             debian-9 \n \
             debian-10 \n \
             opensuseleap-15.1 \n \
             "
-#
-# OELAYOUT_ABI allows us to notify users when the format of TMPDIR changes in
-# an incompatible way. Such changes should usually be detailed in the commit
-# that breaks the format and have been previously discussed on the mailing list
-# with general agreement from the core team.
-#
-OELAYOUT_ABI = "12"
-
 # add poky sanity bbclass
 INHERIT += "poky-sanity"
 
 # QA check settings - a little stricter than the OE-Core defaults
-WARN_TO_ERROR_QA = "already-stripped compile-host-path install-host-path \
-                    installed-vs-shipped ldflags pn-overrides rpaths staticdev \
-                    unknown-configure-option useless-rpaths"
-WARN_QA_remove = "${WARN_TO_ERROR_QA}"
-ERROR_QA_append = " ${WARN_TO_ERROR_QA}"
+# (none currently necessary as we now match OE-Core)
+#WARN_TO_ERROR_QA = "X"
+#WARN_QA_remove = "${WARN_TO_ERROR_QA}"
+#ERROR_QA_append = " ${WARN_TO_ERROR_QA}"
 
 require conf/distro/include/poky-world-exclude.inc
 require conf/distro/include/no-static-libs.inc
 require conf/distro/include/yocto-uninative.inc
 require conf/distro/include/security_flags.inc
 INHERIT += "uninative"
+
+INHERIT += "reproducible_build"
+
+BB_SIGNATURE_HANDLER ?= "OEEquivHash"
+BB_HASHSERVE ??= "auto"
 
 # Enable removal of libtool '*.la' files (this is the default starting in 2.3)
 INHERIT += "remove-libtool"
