--- a/meta-digi-arm/conf/layer.conf
+++ b/meta-digi-arm/conf/layer.conf
@@ -11,7 +11,7 @@ BBFILE_PRIORITY_digi-arm = "5"
 
 LAYERDEPENDS_digi-arm = "core freescale-layer"
 
-LAYERSERIES_COMPAT_digi-arm = "zeus"
+LAYERSERIES_COMPAT_digi-arm = "gatesgarth"
 
 # Define new EULAs and add them to the list defined in meta-freescale.
 # See fsl-eula-unpack.bbclass.
