gatesgarth migration: add meta-python2 layer
Because python2 is deprecated, all packages that depend on python2 were moved
from main layers to a specific meta-python2 layer.

https://jira.digi.com/browse/DEL-7508

Signed-off-by: Arturo Buzarra <arturo.buzarra@digi.com>

--- a/sdk/config/ccimx8x-sbc-pro/bblayers.conf.sample
+++ b/sdk/config/ccimx8x-sbc-pro/bblayers.conf.sample
@@ -17,6 +17,7 @@ BBLAYERS ?= " \
   ##DIGIBASE##/meta-swupdate \
   ##DIGIBASE##/meta-freescale \
   ##DIGIBASE##/meta-fsl-demos \
+  ##DIGIBASE##/meta-python2 \
   ##DIGIBASE##/meta-webkit \
   ##DIGIBASE##/meta-imx/meta-ml \
   ##DIGIBASE##/meta-digi/meta-digi-arm \
