bblayes.conf.sample: add meta-ml layer to i.MX8 platforms
This layer contains all of NXP's recipes needed for machine learning/eIQ
support on i.MX8 platforms.

https://jira.digi.com/browse/DEL-7473
https://jira.digi.com/browse/DEL-7484

Signed-off-by: Gabriel Valcazar <gabriel.valcazar@digi.com>

--- a/sdk/config/ccimx8x-sbc-pro/bblayers.conf.sample
+++ b/sdk/config/ccimx8x-sbc-pro/bblayers.conf.sample
@@ -18,6 +18,7 @@ BBLAYERS ?= " \
   ##DIGIBASE##/meta-freescale \
   ##DIGIBASE##/meta-fsl-demos \
   ##DIGIBASE##/meta-webkit \
+  ##DIGIBASE##/meta-imx/meta-ml \
   ##DIGIBASE##/meta-digi/meta-digi-arm \
   ##DIGIBASE##/meta-digi/meta-digi-dey \
   "
