--- a/sdk/config/ccimx8mn-dvk/bblayers.conf.sample
+++ b/sdk/config/ccimx8mn-dvk/bblayers.conf.sample
@@ -19,6 +19,7 @@ BBLAYERS ?= " \
   ##DIGIBASE##/meta-fsl-demos \
   ##DIGIBASE##/meta-python2 \
   ##DIGIBASE##/meta-webkit \
+  ##DIGIBASE##/meta-imx/meta-ml \
   ##DIGIBASE##/meta-digi/meta-digi-arm \
   ##DIGIBASE##/meta-digi/meta-digi-dey \
   "
